add_subdirectory(run)
add_subdirectory(srcAnalysis)

INSTALL(DIRECTORY ./ DESTINATION ${CMAKE_INSTALL_PREFIX}/macro/
	PATTERN "./mpd_scheduler" EXCLUDE
	PATTERN "./profiling" EXCLUDE
	PATTERN "./CMakeLists.txt" EXCLUDE
)

INSTALL(DIRECTORY ../config DESTINATION ${CMAKE_INSTALL_PREFIX})
INSTALL(DIRECTORY ../gconfig DESTINATION ${CMAKE_INSTALL_PREFIX})
INSTALL(DIRECTORY ../geometry DESTINATION ${CMAKE_INSTALL_PREFIX})
INSTALL(DIRECTORY ../input DESTINATION ${CMAKE_INSTALL_PREFIX})
INSTALL(DIRECTORY ../parameters DESTINATION ${CMAKE_INSTALL_PREFIX})
